deployment/deployment.yaml
###
# This file defines the Kubernetes Deployment for Radicale, a scalable calendar application.
# It describes how Radicale should be deployed, including its container image, ports, volume mounts,
# and an increased number of replicas to enhance redundancy and availability.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: radicale-deployment # The name of the deployment
  namespace: radicale # The namespace to keep resources organized
  labels:
    app: radicale # Labels to group and identify this app
spec:
  replicas: 2 # Increased number of Radicale pods to enhance availability and fault tolerance
  selector:
    matchLabels:
      app: radicale # Selects pods that match this label
  template:
    metadata:
      labels:
        app: radicale # Label applied to all pods created by this deployment
    spec:
      containers:
        - name: radicale # The name of the container
          image: danors/radicale:latest # Docker image for Radicale, pulled from Docker Hub
          ports:
            - containerPort: 5232 # Port Radicale listens to inside the container
          volumeMounts:
            - name: radicale-storage
              mountPath: /var/lib/radicale # Directory for persistent Radicale data
      volumes:
        - name: radicale-storage
          persistentVolumeClaim:
            claimName: radicale-pvc # Use the PVC for persistent data storage
